--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ nav {
   width: 100%;
   max-width: 100%;
   display: flex;
+  align-items: center;
   flex-wrap: wrap;
   flex: 100%;
   position: fixed;
@@ -175,12 +176,13 @@ nav .scl li .ins:hover {
   position: relative;
   width: 100%;
   max-width: 100%;
-
+  
 }
 
 .banner img {
   width: 100%;
   object-fit: cover;
+  height: 100vh;
 
 }
 
@@ -317,10 +319,15 @@ nav .scl li .ins:hover {
   flex: 0 0 30%;
   margin: 1%;
   border-right: 1px solid #00000035;
-  background-color: #ffffff47;
+  background-color: #ffffff;
   transition: .5s;
+  padding-bottom: 20px;
+  line-height: 22px;
+  border-radius: 2px;
 
-
+}
+.service_menu ul li strong {
+padding-bottom: 12px;
 }
 
 .service_menu ul li:hover {
@@ -332,6 +339,7 @@ nav .scl li .ins:hover {
 .service_menu ul li img {
   display: block;
   margin: 0 auto;
+  background-color: transparent;
 }
 
 .service_menu ul li p {
@@ -369,8 +377,10 @@ nav .scl li .ins:hover {
 .service_clk ul li a {
   text-decoration: none;
   font-size: 1.5em;
+  font-weight: 600;
   color: #000000;
   position: relative;
+
 }
 
 .service_clk ul li a:before {
